// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupPrincipals /> should render correctly in loading state 1`] = `
<section
  class="ins-l-content"
  id="tab-principals"
>
   
  <div
    class="pf-c-data-toolbar  ins-c-primary-toolbar"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-c-data-toolbar__content"
    >
      <div
        class="pf-c-data-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-lg pf-m-space-items-lg"
      >
        <div
          class="pf-c-data-toolbar__item ins-c-primary-toolbar__filter"
        >
          <div
            class="pf-l-split ins-c-conditional-filter"
          >
            <div
              class="pf-l-split__item pf-m-fill"
            >
              <input
                aria-invalid="false"
                class="pf-c-form-control ins-c-conditional-filter "
                disabled=""
                id="filter-by-string"
                placeholder="Filter by username"
                type="text"
                value=""
                widget-type="InsightsInput"
              />
              <svg
                aria-hidden="true"
                class="ins-c-search-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align:-0.125em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  transform=""
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-c-data-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-data-toolbar__group pf-m-filter-group"
      />
    </div>
    <div
      class="pf-c-data-toolbar__expandable-content"
      id="ins-primary-data-toolbar-expandable-content"
    >
      <div
        class="pf-c-data-toolbar__group"
      />
    </div>
  </div>
  <ul
    aria-label="datalist-placeholder"
    class="pf-c-data-list"
  >
    <li
      aria-labelledby="datalist-item-placeholder"
      class="pf-c-data-list__item"
    >
      <div
        aria-label="datalist-item-placeholder-row"
        class="pf-c-data-list__item-row"
      >
        <div
          class="pf-c-data-list__item-content"
        >
          <div
            class="pf-c-data-list__cell"
          >
            <div
              class="ins-c-skeleton ins-c-skeleton__lg"
            >
               
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      aria-labelledby="datalist-item-placeholder"
      class="pf-c-data-list__item"
    >
      <div
        aria-label="datalist-item-placeholder-row"
        class="pf-c-data-list__item-row"
      >
        <div
          class="pf-c-data-list__item-content"
        >
          <div
            class="pf-c-data-list__cell"
          >
            <div
              class="ins-c-skeleton ins-c-skeleton__lg"
            >
               
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      aria-labelledby="datalist-item-placeholder"
      class="pf-c-data-list__item"
    >
      <div
        aria-label="datalist-item-placeholder-row"
        class="pf-c-data-list__item-row"
      >
        <div
          class="pf-c-data-list__item-content"
        >
          <div
            class="pf-c-data-list__cell"
          >
            <div
              class="ins-c-skeleton ins-c-skeleton__lg"
            >
               
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      aria-labelledby="datalist-item-placeholder"
      class="pf-c-data-list__item"
    >
      <div
        aria-label="datalist-item-placeholder-row"
        class="pf-c-data-list__item-row"
      >
        <div
          class="pf-c-data-list__item-content"
        >
          <div
            class="pf-c-data-list__cell"
          >
            <div
              class="ins-c-skeleton ins-c-skeleton__lg"
            >
               
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      aria-labelledby="datalist-item-placeholder"
      class="pf-c-data-list__item"
    >
      <div
        aria-label="datalist-item-placeholder-row"
        class="pf-c-data-list__item-row"
      >
        <div
          class="pf-c-data-list__item-content"
        >
          <div
            class="pf-c-data-list__cell"
          >
            <div
              class="ins-c-skeleton ins-c-skeleton__lg"
            >
               
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
  <div
    class="pf-l-toolbar ins-c-table__toolbar"
  >
     
  </div>
   
</section>
`;

exports[`<GroupPrincipals /> should render correctly with default group 1`] = `
<section
  class="ins-l-content"
  id="tab-principals"
>
   
  <article
    class="pf-c-card"
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-pf-content="true"
          >
            All users in this organization are members of this group.
          </h1>
        </div>
      </div>
    </div>
  </article>
   
</section>
`;

exports[`<GroupPrincipals /> should render correctly with empty members 1`] = `
<section
  class="ins-l-content"
  id="tab-principals"
>
   
  <div
    class="pf-c-empty-state"
  >
    <svg
      aria-hidden="true"
      class="pf-c-empty-state__icon"
      fill="currentColor"
      height="1em"
      role="img"
      style="vertical-align:-0.125em"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
        transform=""
      />
    </svg>
    <h5
      class="pf-c-title pf-m-lg"
    >
      There are no members in this group
    </h5>
    <div
      class="pf-c-empty-state__body"
    >
      Add a user to configure user access. 
      <br />
       
      <br />
    </div>
  </div>
   
</section>
`;

exports[`<GroupPrincipals /> should render correctly with members 1`] = `
<section
  class="ins-l-content"
  id="tab-principals"
>
   
  <div
    class="pf-c-data-toolbar  ins-c-primary-toolbar"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-c-data-toolbar__content"
    >
      <div
        class="pf-c-data-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-lg pf-m-space-items-lg"
      >
        <div
          class="pf-c-data-toolbar__item ins-c-primary-toolbar__filter"
        >
          <div
            class="pf-l-split ins-c-conditional-filter"
          >
            <div
              class="pf-l-split__item pf-m-fill"
            >
              <input
                aria-invalid="false"
                class="pf-c-form-control ins-c-conditional-filter "
                id="filter-by-string"
                placeholder="Filter by username"
                type="text"
                value=""
                widget-type="InsightsInput"
              />
              <svg
                aria-hidden="true"
                class="ins-c-search-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align:-0.125em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  transform=""
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-c-data-toolbar__item ins-c-primary-toolbar__pagination"
      >
        <div
          class="pf-c-pagination pf-m-compact"
          count="1"
          id="pagination-options-menu"
          limit="50"
          numberofitems="50"
          offset="0"
        >
          <div
            class="pf-c-pagination__total-items"
          >
            <b>
              1 - 1
            </b>
             of 
            <b>
              1
            </b>
             
          </div>
          <div
            class="pf-c-options-menu"
          >
            <div
              class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
            >
              <span
                class="pf-c-options-menu__toggle-text"
              >
                <b>
                  1 - 1
                </b>
                 of 
                <b>
                  1
                </b>
                 
              </span>
              <button
                aria-expanded="false"
                aria-label="Items per page"
                class="  pf-c-options-menu__toggle-button"
                id="pagination-options-menu-toggle"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align:-0.125em"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    transform=""
                  />
                </svg>
              </button>
            </div>
          </div>
          <nav
            aria-label="Pagination"
            class="pf-c-pagination__nav"
          >
            <button
              aria-label="Go to previous page"
              class="pf-c-button pf-m-plain"
              data-action="previous"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align:-0.125em"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  transform=""
                />
              </svg>
            </button>
            <button
              aria-label="Go to next page"
              class="pf-c-button pf-m-plain"
              data-action="next"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align:-0.125em"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  transform=""
                />
              </svg>
            </button>
          </nav>
        </div>
      </div>
    </div>
    <div
      class="pf-c-data-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-data-toolbar__group pf-m-filter-group"
      />
    </div>
    <div
      class="pf-c-data-toolbar__expandable-content"
      id="ins-primary-data-toolbar-expandable-content"
    >
      <div
        class="pf-c-data-toolbar__group"
      />
    </div>
  </div>
  <table
    aria-label="principals table"
    class="pf-c-table pf-m-grid-md"
    role="grid"
  >
    <thead
      class=""
    >
      <tr>
        <th
          class=""
          data-key="0"
          data-label="Username"
          scope="col"
        >
          Username
        </th>
        <th
          class=""
          data-key="1"
          data-label="Email"
          scope="col"
        >
          Email
        </th>
        <th
          class=""
          data-key="2"
          data-label="Last name"
          scope="col"
        >
          Last name
        </th>
        <th
          class=""
          data-key="3"
          data-label="First name"
          scope="col"
        >
          First name
        </th>
        <td
          class=""
          data-key="4"
          data-label=""
        />
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class=""
          data-key="0"
          data-label="Username"
        >
          test-username
        </td>
        <td
          class=""
          data-key="1"
          data-label="Email"
        >
          test-email
        </td>
        <td
          class=""
          data-key="2"
          data-label="Last name"
        >
          test-last-name
        </td>
        <td
          class=""
          data-key="3"
          data-label="First name"
        >
          tes-first-name
        </td>
        <td
          class="pf-c-table__action"
          data-key="4"
        />
      </tr>
    </tbody>
  </table>
  <div
    class="pf-l-toolbar ins-c-table__toolbar"
  >
     
    <div
      class="pf-c-pagination pf-m-footer"
      count="1"
      id="pagination-options-menu"
      limit="50"
      numberofitems="50"
      offset="0"
    >
      <div
        class="pf-c-options-menu pf-m-top"
      >
        <div
          class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
        >
          <span
            class="pf-c-options-menu__toggle-text"
          >
            <b>
              1 - 1
            </b>
             of 
            <b>
              1
            </b>
             
          </span>
          <button
            aria-expanded="false"
            aria-label="Items per page"
            class="  pf-c-options-menu__toggle-button"
            id="pagination-options-menu-toggle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align:-0.125em"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </button>
        </div>
      </div>
      <nav
        aria-label="Pagination"
        class="pf-c-pagination__nav"
      >
        <button
          aria-label="Go to first page"
          class="pf-c-button pf-m-plain"
          data-action="first"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
              transform=""
            />
          </svg>
        </button>
        <button
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain"
          data-action="previous"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
              transform=""
            />
          </svg>
        </button>
        <div
          class="pf-c-pagination__nav-page-select"
        >
          <input
            aria-label="Current page"
            class="pf-c-form-control"
            disabled=""
            max="1"
            min="1"
            type="number"
            value="1"
          />
          <span
            aria-hidden="true"
          >
            of 1
          </span>
        </div>
        <button
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain"
          data-action="next"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              transform=""
            />
          </svg>
        </button>
        <button
          aria-label="Go to last page"
          class="pf-c-button pf-m-plain"
          data-action="last"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
              transform=""
            />
          </svg>
        </button>
      </nav>
    </div>
  </div>
   
</section>
`;

exports[`<GroupPrincipals /> should render correctly with org admin rights 1`] = `
<section
  class="ins-l-content"
  id="tab-principals"
>
   
  <div
    class="pf-c-data-toolbar  ins-c-primary-toolbar"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-c-data-toolbar__content"
    >
      <div
        class="pf-c-data-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-lg pf-m-space-items-lg"
      >
        <div
          class="pf-c-data-toolbar__item ins-c-primary-toolbar__filter"
        >
          <div
            class="pf-l-split ins-c-conditional-filter"
          >
            <div
              class="pf-l-split__item pf-m-fill"
            >
              <input
                aria-invalid="false"
                class="pf-c-form-control ins-c-conditional-filter "
                id="filter-by-string"
                placeholder="Filter by username"
                type="text"
                value=""
                widget-type="InsightsInput"
              />
              <svg
                aria-hidden="true"
                class="ins-c-search-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align:-0.125em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  transform=""
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-c-data-toolbar__item ins-c-primary-toolbar__pagination"
      >
        <div
          class="pf-c-pagination pf-m-compact"
          count="1"
          id="pagination-options-menu"
          limit="50"
          numberofitems="50"
          offset="0"
        >
          <div
            class="pf-c-pagination__total-items"
          >
            <b>
              1 - 1
            </b>
             of 
            <b>
              1
            </b>
             
          </div>
          <div
            class="pf-c-options-menu"
          >
            <div
              class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
            >
              <span
                class="pf-c-options-menu__toggle-text"
              >
                <b>
                  1 - 1
                </b>
                 of 
                <b>
                  1
                </b>
                 
              </span>
              <button
                aria-expanded="false"
                aria-label="Items per page"
                class="  pf-c-options-menu__toggle-button"
                id="pagination-options-menu-toggle"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align:-0.125em"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    transform=""
                  />
                </svg>
              </button>
            </div>
          </div>
          <nav
            aria-label="Pagination"
            class="pf-c-pagination__nav"
          >
            <button
              aria-label="Go to previous page"
              class="pf-c-button pf-m-plain"
              data-action="previous"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align:-0.125em"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  transform=""
                />
              </svg>
            </button>
            <button
              aria-label="Go to next page"
              class="pf-c-button pf-m-plain"
              data-action="next"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align:-0.125em"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  transform=""
                />
              </svg>
            </button>
          </nav>
        </div>
      </div>
    </div>
    <div
      class="pf-c-data-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-data-toolbar__group pf-m-filter-group"
      />
    </div>
    <div
      class="pf-c-data-toolbar__expandable-content"
      id="ins-primary-data-toolbar-expandable-content"
    >
      <div
        class="pf-c-data-toolbar__group"
      />
    </div>
  </div>
  <table
    aria-label="principals table"
    class="pf-c-table pf-m-grid-md"
    role="grid"
  >
    <thead
      class=""
    >
      <tr>
        <th
          class=""
          data-key="0"
          data-label="Username"
          scope="col"
        >
          Username
        </th>
        <th
          class=""
          data-key="1"
          data-label="Email"
          scope="col"
        >
          Email
        </th>
        <th
          class=""
          data-key="2"
          data-label="Last name"
          scope="col"
        >
          Last name
        </th>
        <th
          class=""
          data-key="3"
          data-label="First name"
          scope="col"
        >
          First name
        </th>
        <td
          class=""
          data-key="4"
          data-label=""
        />
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class=""
          data-key="0"
          data-label="Username"
        >
          test-username
        </td>
        <td
          class=""
          data-key="1"
          data-label="Email"
        >
          test-email
        </td>
        <td
          class=""
          data-key="2"
          data-label="Last name"
        >
          test-last-name
        </td>
        <td
          class=""
          data-key="3"
          data-label="First name"
        >
          tes-first-name
        </td>
        <td
          class="pf-c-table__action"
          data-key="4"
        />
      </tr>
    </tbody>
  </table>
  <div
    class="pf-l-toolbar ins-c-table__toolbar"
  >
     
    <div
      class="pf-c-pagination pf-m-footer"
      count="1"
      id="pagination-options-menu"
      limit="50"
      numberofitems="50"
      offset="0"
    >
      <div
        class="pf-c-options-menu pf-m-top"
      >
        <div
          class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
        >
          <span
            class="pf-c-options-menu__toggle-text"
          >
            <b>
              1 - 1
            </b>
             of 
            <b>
              1
            </b>
             
          </span>
          <button
            aria-expanded="false"
            aria-label="Items per page"
            class="  pf-c-options-menu__toggle-button"
            id="pagination-options-menu-toggle"
            type="button"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align:-0.125em"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </button>
        </div>
      </div>
      <nav
        aria-label="Pagination"
        class="pf-c-pagination__nav"
      >
        <button
          aria-label="Go to first page"
          class="pf-c-button pf-m-plain"
          data-action="first"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
              transform=""
            />
          </svg>
        </button>
        <button
          aria-label="Go to previous page"
          class="pf-c-button pf-m-plain"
          data-action="previous"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
              transform=""
            />
          </svg>
        </button>
        <div
          class="pf-c-pagination__nav-page-select"
        >
          <input
            aria-label="Current page"
            class="pf-c-form-control"
            disabled=""
            max="1"
            min="1"
            type="number"
            value="1"
          />
          <span
            aria-hidden="true"
          >
            of 1
          </span>
        </div>
        <button
          aria-label="Go to next page"
          class="pf-c-button pf-m-plain"
          data-action="next"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              transform=""
            />
          </svg>
        </button>
        <button
          aria-label="Go to last page"
          class="pf-c-button pf-m-plain"
          data-action="last"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
              transform=""
            />
          </svg>
        </button>
      </nav>
    </div>
  </div>
   
</section>
`;
